# gpt_academic_l

./: .env  .gitignore  check_proxy.py  config.py  config_model.py  crazy_functional.py  main.py  pyproject.toml  version
.github/workflows/: make_release.yml  update_version.yml
crazy_functions/: make_article_enhance.py  make_pdf_briefing.py  批量总结PDF文档.py
crazy_functions/articles/: article_scorer.py  article_utils.py  make_article_enhance.py  make_article_write_only.py  make_articles.py  make_articles_iteration.py  make_pdf_briefing.py  make_pdf_briefing_par.py
shared_utils/: handle_upload.py
